# hsef-main

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  README.md  VISUAL_STUDIO_README.md  assignment1_part2_default.csv  assignment1_part3_default.csv  assignment1_part3_hg.csv  assignment1_part3_lg.csv
a1_files/: output.csv  (+1 more)
core/: CMakeLists.txt
core/building_tools/: CMakeLists.txt
core/building_tools/evaluators/: CMakeLists.txt  constant_heuristic.h  cost_and_distance_to_go_evaluator.h  distance_to_go_wrapper_evaluator.h  evaluation_cache.cpp  evaluation_cache.h  evaluator_tools_terms.h  hash_map_heuristic.h  node_evaluator_with_cache.h  non_goal_heuristic.h  set_aggregate_evaluator.h  set_aggregate_evaluator_factory.h  single_goal_state_evaluator.h
core/building_tools/goal_tests/: CMakeLists.txt  goal_tests_tools_terms.h  multi_state_hash_based_goal_test.h  single_state_goal_test.h
core/building_tools/hashing/: CMakeLists.txt  permutation_hash_function.h  signed_permutation_hash_function.h  state_hash_function.h  state_string_hash_function.h
core/engines/: CMakeLists.txt  single_step_search_engine.h
core/engines/best_first_search/: CMakeLists.txt  a_star_epsilon.h  a_star_epsilon_params.cpp  a_star_epsilon_params.h  best_first_search.h  best_first_search_params.cpp  best_first_search_params.h
core/engines/engine_components/: CMakeLists.txt
core/engines/iterative_deepening/: CMakeLists.txt  id_engine.h  id_engine_params.cpp  id_engine_params.h
core/environments/: CMakeLists.txt
core/environments/burnt_pancake_puzzle/: CMakeLists.txt  burnt_gap_heuristic.cpp  burnt_gap_heuristic.h  burnt_pancake_hash_function.h  burnt_pancake_state.cpp  burnt_pancake_state.h  burnt_pancake_transitions.cpp  burnt_pancake_transitions.h
core/environments/graph/: CMakeLists.txt  graph.cpp  graph.h  graph_action.cpp  graph_action.h  graph_state.cpp  graph_state.h  graph_transitions.cpp  graph_transitions.h  graph_utils.cpp  graph_utils.h  vertex_hash_function.cpp  vertex_hash_function.h
core/environments/grid_pathfinding/: CMakeLists.txt  grid_location.cpp  grid_location.h  grid_location_hash_function.cpp  grid_location_hash_function.h  grid_map.cpp  grid_map.h  grid_names.h  grid_pathfinding_action.cpp  grid_pathfinding_action.h  grid_pathfinding_euclidean_heuristic.cpp  grid_pathfinding_euclidean_heuristic.h  grid_pathfinding_lifecost_heuristic.cpp  grid_pathfinding_lifecost_heuristic.h  grid_pathfinding_manhattan_heuristic.cpp  grid_pathfinding_manhattan_heuristic.h  grid_pathfinding_octile_heuristic.cpp  grid_pathfinding_octile_heuristic.h  grid_pathfinding_scenario_running.cpp  grid_pathfinding_scenario_running.h  grid_pathfinding_transitions.cpp  grid_pathfinding_transitions.h  grid_pathfinding_utils.cpp  grid_pathfinding_utils.h
core/environments/k_ary_tree/: CMakeLists.txt  k_ary_tree_action.h  k_ary_tree_names.h  k_ary_tree_state.cpp  k_ary_tree_state.h  k_ary_tree_transitions.cpp  k_ary_tree_transitions.h
core/environments/pancake_puzzle/: CMakeLists.txt  gap_heuristic.cpp  gap_heuristic.h  pancake_action.cpp  pancake_action.h  pancake_hash_function.h  pancake_names.h  pancake_state.cpp  pancake_state.h  pancake_transitions.cpp  pancake_transitions.h  pancake_utils.cpp  pancake_utils.h
core/environments/sliding_tile_puzzle/: CMakeLists.txt  sliding_tile_action.cpp  sliding_tile_action.h  sliding_tile_hash_function.h  sliding_tile_manhattan_heuristic.cpp  sliding_tile_manhattan_heuristic.h  sliding_tile_names.h  sliding_tile_state.cpp  sliding_tile_state.h  sliding_tile_transitions.cpp  sliding_tile_transitions.h  sliding_tile_utils.cpp  sliding_tile_utils.h
core/experiment_running/: CMakeLists.txt  experiment_results.h  experiment_runner.h  search_resource_limits.cpp  search_resource_limits.h
core/logging/: CMakeLists.txt  experiment_results_writer.h  logging_terms.h  search_component_settings.h  settings_logger.cpp  settings_logger.h  standard_search_statistics.cpp  standard_search_statistics.h  yaml_logging.cpp  yaml_logging.h
core/search_basics/: CMakeLists.txt  goal_test.h  node_container.h  node_evaluator.h  search_engine.h  transition_system.h
core/utils/: CMakeLists.txt  combinatorics.cpp  combinatorics.h  evaluator_utils.h  floating_point_utils.cpp  floating_point_utils.h  io_utils.cpp  io_utils.h  plan_and_path_utils.h  random_gen_utils.cpp  random_gen_utils.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h
docs/: CMakeLists.txt  CODE_CONVENTIONS.md  CPLUSPLUS_PRIMER.md  Doxyfile.in  HSEF_ARCHITECTURE.md  mainpage.dox
tests/: CMakeLists.txt  test_helpers.h
tests/building_tools/: CMakeLists.txt
tests/building_tools/evaluators/: CMakeLists.txt  constant_heuristic_test.cpp  distance_to_go_wrapper_evaluator_test.cpp  evaluation_cache_test.cpp  hash_map_heuristic_test.cpp  node_evaluator_with_cache_test.cpp  non_goal_heuristic_test.cpp  set_aggregate_evaluator_factory_test.cpp  set_aggregate_evaluator_test.cpp
tests/building_tools/goal_tests/: CMakeLists.txt  multi_state_hash_based_goal_test_test.cpp  single_goal_test_test.cpp
tests/building_tools/hashing/: CMakeLists.txt  permutation_hash_function_test.cpp  signed_permutation_hash_function_test.cpp  state_string_hash_function_test.cpp
tests/engines/: CMakeLists.txt
tests/engines/best_first_search/: CMakeLists.txt  a_star_epsilon_params_test.cpp  a_star_epsilon_test.cpp  (+2 more)
tests/environments/: CMakeLists.txt
tests/experiment_running/: CMakeLists.txt  experiment_runner_test.cpp  search_resource_limits_test.cpp
tests/logging/: CMakeLists.txt  experiment_result_writer_test.cpp  standard_search_statistics_test.cpp  yaml_logging_test.cpp
tests/search_basics/: CMakeLists.txt  transition_system_test.cpp
tests/utils/: CMakeLists.txt  combinatorics_test.cpp  evaluator_utils_test.cpp  floating_point_utils_test.cpp  plan_and_path_utils_test.cpp  random_gen_utils_test.cpp  string_utils_test.cpp  timer_test.cpp
visualizer/: CMakeLists.txt  grid_pathfinding.cpp  grid_pathfinding.h  grid_pathfinding_colours.h  main.cpp
visualizer/assets/: test  test2  test3
(+121 files in other folders)
